--- a/app.yaml
+++ b/app.yaml
@@ -1,16 +1,24 @@
-runtime: python311 # or another supported version
-
-instance_class: F2
-
-env_variables:
-  BUCKET_NAME: "example-gcs-bucket"
+runtime: python311
+api_version: 1
+threadsafe: true
 
 handlers:
-# Matches requests to /images/... to files in static/images/...
-- url: /images
-  static_dir: static/images
+- url: /
+  script: home.app
+
+- url: /index\.html
+  script: home.app
+
+- url: /stylesheets
+  static_dir: stylesheets
+
+- url: /(.*\.(gif|png|jpg))$
+  static_files: static/\1
+  upload: static/.*\.(gif|png|jpg)$
+
+- url: /admin/.*
+  script: admin.app
+  login: admin
 
 - url: /.*
-  secure: always
-  redirect_http_response_code: 301
-  script: auto
+  script: not_found.app
